# workline-client-server-messenger

Client/: CMakeLists.txt
Client/include/: AddUserInChatController.h  AddUserOnServerController.h  ApplicationPageController.h  CandidateUserModel.h  ChatHistoryController.h  ChatHistoryModel.h  ChatInfoBarController.h  ChatModel.h  ChatsBarController.h  ChatsManager.h  ConfigureAdminController.h  CreateGroupChatController.h  Encryption.h  ImageWorker.h  JsonWorker.h  LoginPageController.h  MainController.h  ProfilePageController.h  RegistrationPageController.h  SelectedChatManager.h  SelectedServerManager.h  ServerConnector.h  ServerModel.h  ServerTableController.h  TopBarController.h  UnverifiedUserModel.h  UserAccountController.h  UserAccountManager.h  UserModel.h  UsersModel.h
Client/src/: main.cpp  main.qml  qmldir  resources.qrc
Client/src/connection/: ServerConnector.cpp
Client/src/controller/adduserinchatcontroller/: AddUserInChatController.cpp
Client/src/controller/adduseronservercontroller/: AddUserOnServerController.cpp
Client/src/controller/applicationpagecontroller/: ApplicationPageController.cpp
Client/src/controller/chathistorycontroller/: ChatHistoryController.cpp
Client/src/controller/chatinfobarcontroller/: ChatInfoBarController.cpp
Client/src/controller/chatsbarcontroller/: ChatsBarController.cpp
Client/src/controller/configureadmincontroller/: ConfigureAdminController.cpp
Client/src/controller/creategroupchatcontroller/: CreateGroupChatController.cpp
Client/src/controller/loginpagecontroller/: LoginPageController.cpp
Client/src/controller/maincontroller/: MainController.cpp
Client/src/controller/profilepagecontroller/: ProfilePageController.cpp
Client/src/controller/registrationpagecontroller/: RegistrationPageController.cpp
Client/src/controller/servertablecontroller/: ServerTableController.cpp
Client/src/controller/topbarcontroller/: TopBarController.cpp
Client/src/controller/useraccountcontroller/: UserAccountController.cpp
Client/src/manager/chatsmanager/: ChatsManager.cpp
Client/src/manager/selectedchatmanager/: SelectedChatManager.cpp
Client/src/manager/selectedservermanager/: SelectedServerManager.cpp
Client/src/manager/usermanager/: UserAccountManager.cpp
Client/src/model/: UserModel.cpp
Client/src/model/candidateusermodel/: CandidateUserModel.cpp
Client/src/model/chathistorymodel/: ChatHistoryModel.cpp
Client/src/model/chatmodel/: ChatModel.cpp
Client/src/model/servermodel/: ServerModel.cpp
Client/src/model/unverifiedusermodel/: UnverifiedUserModel.cpp
Client/src/model/usermodel/: UserModel.cpp
Client/src/model/usersmodel/: UsersModel.cpp
Client/src/resources/: Colors.qml  DropShadow.qml  Fonts.qml  Shadows.qml  Sizes.qml  qmldir
Client/src/utils/: Encryption.cpp  ImageWorker.cpp  JsonWorker.cpp
Client/src/view/apppages/loginpage/: LoginPage.qml
Client/src/view/apppages/mainpage/: MainPage.qml
Client/src/view/apppages/registrationpage/: RegistrationPage.qml
Client/src/view/customwidgets/compositewidgets/: ChatHistory.qml  ChatInfoBar.qml  ChatMessageView.qml  ChatsBar.qml  ServerTable.qml  TopBar.qml  qmldir
Client/src/view/customwidgets/widgets/: AddImage.qml  AddServerButton.qml  AddUserButton.qml  AddUsersObject.qml  AdminSwitcherButton.qml  ApplicationObject.qml  ApproveButton.qml  BackButton.qml  CandidateUserObject.qml  ChatLastMessageText.qml  ChatMessageInput.qml  ChatMessageObject.qml  ChatMessageText.qml  ChatNameText.qml  ChatObject.qml  ConfigureAdminObject.qml  CreateChatButton.qml  ErrorText.qml  InputField.qml  MenuButton.qml  MenuPageInputField.qml  MenuPageLabel.qml  MenuText.qml  MenuWidget.qml  MyButton.qml  MyPopup.qml  NotificationManager.qml  RefreshButton.qml  RejectButton.qml  Separator.qml  ServerObject.qml  ShowPasswordButton.qml  SwitcherButton.qml  TextButton.qml  Tooltip.qml  ViewImage.qml  WindowText.qml  qmldir
Client/src/view/loginpage/: LoginPage.qml  qmldir
Client/src/view/loginwindow/: LoginWindow.qml  qmldir
Client/src/view/mainpage/: MainPage.qml  qmldir
Client/src/view/registrationpage/: RegistrationPage.qml  qmldir
Client/src/view/widgets/: AddServerButton.qml  BackButton.qml  ErrorText.qml  InputField.qml  MyButton.qml  MyPopup.qml  NotificationManager.qml  ServerObject.qml  ServerTable.qml  ShowPasswordButton.qml  Tooltip.qml  WindowText.qml  qmldir
Client/src/view/widgets/windows/: AddServerWindow.qml  qmldir
Client/src/view/windowpages/menuadduseronserverpage/: MenuAddUserOnServerPage.qml  qmldir
Client/src/view/windowpages/menuapplicationpage/: MenuApplicationPage.qml  qmldir
Client/src/view/windowpages/menuconfigureadminpage/: MenuConfigureAdminPage.qml  qmldir
Client/src/view/windowpages/menucreategroupchatpage/: MenuCreateGroupChatPage.qml  (+1 more)
Client/src/view/windows/: AddServerWindow.qml  AddUsersWindow.qml  ChatInfoWindow.qml  CreateChatWindow.qml  GroupChatInfoWindow.qml  MenuWindow.qml  qmldir
Client/src/windows/: MyCustomWindow.qml  qmldir
Server/: .gitignore  CMakeLists.txt
Server/include/: ChatsDBManager.h  ConnectedUsers.h  DBConnection.h  DBConnectionPool.h  Database.h  DatabaseQueries.h  ImageWorker.h  JsonWorker.h  MessageDBManager.h  RequestRouter.h  Server.h  ServerDBManager.h  Session.h  ThreadPool.h  UserDBManager.h
Server/include/struct/: AddResult.h  AddUserOnServerResult.h  CandidateUserStruct.h  ChatDataResult.h  ChatHistoryResult.h  CreateGroupChatResult.h  GroupChatDataStruct.h  GroupChatStruct.h  LoginResult.h  PrivateChatStruct.h  ReconnectResult.h  ServerDeleteStruct.h  ServerStruct.h  SetMessageResult.h  UnverUserStruct.h  UsersOnServerStruct.h
Server/src/: main.cpp
Server/src/connections/: ConnectedUsers.cpp
Server/src/db/: DBConnection.cpp  DBConnectionPool.cpp  Database.cpp  DatabaseQueries.cpp
Server/src/db/managers/: ChatsDBManager.cpp  MessageDBManager.cpp  ServerDBManager.cpp  UserDBManager.cpp
Server/src/routers/: RequestRouter.cpp
Server/src/server/: Server.cpp
Server/src/session/: Session.cpp
Server/src/utils/: ImageWorker.cpp  JsonWorker.cpp  ThreadPool.cpp
(+8 files in other folders)
